[package]
name = "pbuild"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A parallel, hash-based build engine"
license = "MIT"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# pedantic lints that are noisy without much benefit:
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[lib]
name = "pbuild"
path = "src/lib.rs"

[[bin]]
name = "pbuild"
path = "src/main.rs"

[dependencies]
sha2 = "0.10"
hex = "0.4"
rayon = "1"
anyhow = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
